# yoink

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  config-example.yaml  schema.json
yoinkd/: CMakeLists.txt
yoinkd/src/: command.cpp  command.hpp  config.cpp  config.hpp  main.cpp  manager.cpp  manager.hpp  monitor.cpp  monitor.hpp  pattern.cpp  pattern.hpp
